# LinearRegions

./: .gitignore  CLAUDE.md  analysis.ipynb  analysis_causal.py  analysis_pruning.py  analysis_region_sweep.py  analysis_verification.py  applications.md  complete_verify.py  datasets.py  findings.md  linear_regions.py  models.py  pruning.py  pyproject.toml  run_causal_sweep.py  run_experiment.py  run_pruning.py  run_region_sweep.py  run_verification.py  sanity_bullseye_regions.py  trainer.py  verification.py
.ipynb_checkpoints/: analysis-checkpoint.ipynb
results_cifar/: cifar10_adam_ce_w128_d2_20260419_190447.json
results_mnist/: mnist_adam_ce_w128_d2_20260419_185659.json  mnist_adam_ce_w128_d2_20260419_190657.json  mnist_adam_ce_w128_d2_20260419_190931.json  mnist_adam_ce_w128_d2_20260421_125701.json  mnist_sgd_ce_w128_d2_20260419_185512.json
slurm/: causal_sweep.sbatch
